<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- Pantalla principal -->
    <string name="action_settings">Settings</string>
    <string name="app_name">Recetator3000</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="recetas">Recetas</string>
    <string name="buscar_recetas">Buscar recetas</string>
    
<!-- Pantalla recetas -->
    <string name="title_activity_actividad_recetas">Recetas</string>
    <string name="nueva_receta">Nueva receta</string>
    <string name="mis_recetas">Mis recetas</string>
    <string name="recetas_favoritas">Recetas favoritas</string>
    <string name="recetas_pendientes">Recetas pendientes</string>
    
<!-- Pantalla nueva receta -->
    <string name="title_activity_actividad_nueva_receta">Nueva Receta</string>
    <string name="nombre_receta">Nombre de la Receta</string>
    <string name="tipo_plato">Tipo de plato</string>
    <string name="ingrediente">Ingrediente principal</string>
    <string name="dificultad">Dificultad</string>
    <string name="tiempo">Tiempo de preparación</string>
    <string name="calorias">Valor calórico</string>
    <string name="celiacos">Apto para celíacos</string>
    <string name="lactosa">Apto para alérgicos a la lactosa</string>
    <string name="ingredientes">Ingredientes:</string>
    <string name="modo">Modo de elaboración:</string>

</resources>
