<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recetas_de_cocina"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ActividadRecetas" >
    

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:textColor="@color/blanco"
        android:textSize="@dimen/letra_grande"
        android:text="@string/nueva_receta"
        android:onClick="nueva" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_grande"
        android:background="@drawable/style_button"
        android:textColor="@color/blanco"
        android:textSize="@dimen/letra_grande"
        android:text="@string/mis_recetas"
        android:onClick="misRecetas" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_grande"
        android:layout_marginTop="@dimen/margin_grande"
        android:background="@drawable/style_button"
        android:textColor="@color/blanco"
        android:textSize="@dimen/letra_grande"
        android:text="@string/recetas_favoritas"
        android:onClick="favoritas" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:textColor="@color/blanco"
        android:textSize="@dimen/letra_grande"
        android:text="@string/recetas_pendientes"
        android:onClick="pendientes" />
    
</LinearLayout>
