<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recetas_de_cocina"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActividadNuevaReceta" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_nuevareceta"
        android:background="#D9FFFFFF" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/nombre_receta"
                android:textSize="@dimen/letra_nueva_receta" />

            <EditText
                android:id="@+id/editText1"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1"
                android:textSize="@dimen/letra_nueva_receta"
                android:ems="10" >
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="@dimen/margin_nuevareceta"
                android:text="@string/tipo_plato"
                android:textSize="@dimen/letra_nueva_receta" />

            <Spinner
                android:id="@+id/tipo_plato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView2"
                android:layout_toRightOf="@+id/textView2" >
            </Spinner>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="@dimen/margin_nuevareceta"
                android:text="@string/ingrediente"
                android:textSize="@dimen/letra_nueva_receta" />

            <Spinner
                android:id="@+id/ingrediente_principal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView3"
                android:layout_toRightOf="@+id/textView3" >
            </Spinner>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="@dimen/margin_nuevareceta"
                android:text="@string/dificultad"
                android:textSize="@dimen/letra_nueva_receta" />

            <Spinner
                android:id="@+id/dificultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView4"
                android:layout_toRightOf="@+id/textView4" >
            </Spinner>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="@dimen/margin_nuevareceta"
                android:text="@string/tiempo"
                android:textSize="@dimen/letra_nueva_receta" />

            <EditText
                android:id="@+id/editText2"
                android:inputType="time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView5"
                android:layout_toRightOf="@+id/textView5"
                android:textSize="@dimen/letra_nueva_receta"
                android:ems="10" >
            </EditText>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="@dimen/margin_nuevareceta"
                android:text="@string/calorias"
                android:textSize="@dimen/letra_nueva_receta" />

            <EditText
                android:id="@+id/editText3"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView6"
                android:layout_toRightOf="@+id/textView6"
                android:textSize="@dimen/letra_nueva_receta"
                android:ems="10" >
            </EditText>

            <CheckBox
                android:id="@+id/celiacos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="@dimen/margin_nuevareceta"
                android:text="@string/celiacos"
                android:textSize="@dimen/letra_nueva_receta" />

            <CheckBox
                android:id="@+id/lactosa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/celiacos"
                android:layout_below="@+id/celiacos"
                android:text="@string/lactosa"
                android:textSize="@dimen/letra_nueva_receta" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lactosa"
                android:layout_below="@+id/lactosa"
                android:layout_marginTop="@dimen/margin_nuevareceta"
                android:text="@string/ingredientes"
                android:textSize="@dimen/letra_nueva_receta" />

            <MultiAutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView7"
                android:layout_below="@+id/textView7"
                android:textSize="@dimen/letra_nueva_receta"
                android:ems="10" >

                <requestFocus />
            </MultiAutoCompleteTextView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/autoCompleteTextView1"
                android:layout_below="@+id/autoCompleteTextView1"
                android:layout_marginTop="@dimen/margin_nuevareceta"
                android:text="@string/modo"
                android:textSize="@dimen/letra_nueva_receta" />

            <EditText
                android:id="@+id/editText4"
                android:inputType="textAutoCorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView8"
                android:layout_below="@+id/textView8"
                android:textSize="@dimen/letra_nueva_receta"
                android:ems="10" />

            <Button
                android:id="@+id/guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText4"
                android:layout_toLeftOf="@+id/button1"
                android:layout_marginRight="@dimen/margin_menu"
                android:background="@drawable/style_button"
                android:text="guardar"
                android:textSize="@dimen/letra_nueva_receta" />

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_below="@+id/editText4"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText4"
                android:layout_toRightOf="@+id/button1"
                android:layout_marginLeft="@dimen/margin_menu"
                android:background="@drawable/style_button"
                android:text="cancelar"
                android:textSize="@dimen/letra_nueva_receta" />
        
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
